--- a/catalog.html
+++ b/catalog.html
@@ -28,8 +28,10 @@
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
 			<div class="header-section-centr-authorization">
-			<a class="header-section-centr-login-link" href="blank.html">Вход</a>
-			<a class="header-section-centr-reg-link" href="blank.html">Регистрация</a>
+				<div class="header-section-centr-name">
+					<a href="blank.html">Равшан Джамшутович</a>
+				</div>
+			    <a class="header-section-centr-account" href="blank.html">Мои заказы  - Личный кабинет</a>
 			</div>
 		</section>
 		<nav class="header-navigation">	
@@ -47,134 +49,148 @@
 	
 	<main>
 	
-	    <ul>
-            <li>
+	    <ul class="breadcrumbs">
+            <li class="breadcrumbs-item">
                 <a href="index.html"></a>
             </li>
-            <li>
+            <li class="breadcrumbs-item">
                 <a href="catalog.html">КАТАЛОГ</a>
             </li>
-			<li>
+			<li class="breadcrumbs-item">
                 <a href="catalog.html">ИНСТРУМЕНТ</a>
             </li>
-            <li>
+            <li class="breadcrumbs-item">
                 <a>ПЕРФОРАТОРЫ</a>
             </li>
         </ul>
 	
-	    <h1>ПЕРФОРАТОРЫ</h1>
+		<div class="box-h1">
+	        <h1>ПЕРФОРАТОРЫ</h1>
+		</div>
 		
         <section>
-            <h2>Фильтр товаров</h2>
-            <!-- Здесь будет форма фильтра -->
+
+			<div class="box-header-filter">
+			    <h3>Фильтр:</h3>
+			</div>
+
+			<div class="main-filter">
+			    <p>Цена:</p>
+			    <p>Производители:</p>
+			    <p>Питание:</p>
+			</div>
+			
         </section>
 
         <section>
-            <h2>Список товаров</h2>
-			<div>
-			    <h3>СОРТИРОВКА</h3>
+
+			<h2>Список товаров</h2>
+			
+			<div class="box-sort">
+			    <h3>СОРТИРОВКА:</h3>
                 <!-- Здесь будет форма сортировки -->
 			</div>
-			<div>
-			    <ul>
-				<li>
-				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+
+			<div class="catalog-products">
+			    <ul  class="catalog-products-list">
+				<li  class="main-product-item">
+					<div class="img-product">
+						<img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+					</div>
 					<span>NEW</span>
-					<a href="#">КУПИТЬ</a>	
-					<a href="#">В ЗАКЛАДКИ</a>	
-					<a href="blank.html">
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
-						<span>30500 Р.</span>
-						<button type="button">25500 Р.</button>					
+					<div class="old-price"><span>30500 Р.</span></div>
+						<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
-				<li>
-				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
-					<span>NEW</span>
-					<a href="#">КУПИТЬ</a>	
-					<a href="#">В ЗАКЛАДКИ</a>	
-					<a href="blank.html">
+				<li  class="main-product-item">
+					<div class="img-product">
+					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+				    </div>
+					<span>NEW</span>	
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
-						<span>30500 Р.</span>
-						<button type="button">25500 Р.</button>					
+					<div class="old-price"><span>30500 Р.</span></div>
+					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
-				<li>
-				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
-					<span>NEW</span>
-					<a href="#">КУПИТЬ</a>	
-					<a href="#">В ЗАКЛАДКИ</a>	
-					<a href="blank.html">
+				<li  class="main-product-item">
+					<div class="img-product">
+					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+				    </div>
+					<span>NEW</span>	
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
-						<span>30500 Р.</span>
-						<button type="button">25500 Р.</button>					
+					<div class="old-price"><span>30500 Р.</span></div>
+					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
-				<li>
-				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
-					<span>NEW</span>
-					<a href="#">КУПИТЬ</a>	
-					<a href="#">В ЗАКЛАДКИ</a>	
-					<a href="blank.html">
+				<li  class="main-product-item">
+					<div class="img-product">
+					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
+				    </div>
+					<span>NEW</span>	
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a>
-						<span>22500 Р.</span>
-						<button type="button">15500 Р.</button>					
+					<div class="old-price"><span>22500 Р.</span></div>
+					<div class="button-product"><a href="#">15500 Р.</a></div>					
 				</li>
-								<li>
-				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
-					<span>NEW</span>
-					<a href="#">КУПИТЬ</a>	
-					<a href="#">В ЗАКЛАДКИ</a>	
-					<a href="blank.html">
+				<li class="main-product-item">
+					<div class="img-product">
+					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+				    </div>
+					<span>NEW</span>	
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
-						<span>30500 Р.</span>
-						<button type="button">25500 Р.</button>					
+					<div class="old-price"><span>30500 Р.</span></div>
+					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
-				<li>
-				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
+				<li  class="main-product-item">
+					<div class="img-product">
+					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
+				    </div>
 					<span>NEW</span>
-					<a href="#">КУПИТЬ</a>	
-					<a href="#">В ЗАКЛАДКИ</a>	
-					<a href="blank.html">
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a>
-						<span></span>
-						<button type="button">12500 Р.</button>					
+					<div class="old-price"><span></span></div>
+					<div class="button-product"><a href="#">12500 Р.</a></div>				
 				</li>
-								<li>
-				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
-					<span>NEW</span>
-					<a href="#">КУПИТЬ</a>	
-					<a href="#">В ЗАКЛАДКИ</a>	
-					<a href="blank.html">
+				<li class="main-product-item">
+					<div class="img-product">
+					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
+				    </div>
+					<span>NEW</span>	
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a>
-						<span>22500 Р.</span>
-						<button type="button">15500 Р.</button>					
+					<div class="old-price"><span>22500 Р.</span></div>
+					<div class="button-product"><a href="#">15500 Р.</a></div>					
 				</li>
-				<li>
-				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
-					<span>NEW</span>
-					<a href="#">КУПИТЬ</a>	
-					<a href="#">В ЗАКЛАДКИ</a>	
-					<a href="blank.html">
+				<li  class="main-product-item">
+					<div class="img-product">
+					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+				    </div>
+					<span>NEW</span>	
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
-						<span>30500 Р.</span>
-						<button type="button">25500 Р.</button>					
+					<div class="old-price"><span>30500 Р.</span></div>
+					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
-				<li>
-				    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
+				<li  class="main-product-item">
+					<div class="img-product">
+					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
+				    </div>
 					<span>NEW</span>
-					<a href="#">КУПИТЬ</a>	
-					<a href="#">В ЗАКЛАДКИ</a>	
-					<a href="blank.html">
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a>
-						<span></span>
-						<button type="button">12500 Р.</button>					
+					<div class="old-price"><span></span></div>
+					<div class="button-product"><a href="#">12500 Р.</a></div>					
 				</li>				
 			</ul>
 			</div>
