добавил фото и иконки

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="header">
 	    <section class="header-section-logo">
-            <div class="header-logo"><a href="#"></a></div>
+            <div class="header-logo"><a href="index.html"><img src="img/logo.png" width="220" height="47" alt="Логотип компании Техномарт"></a></div>
 			<form class="header-search">
                 <input type="search" name="q" placeholder="Поиск:">
             </form>
