добавил контекстные фото на главную

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="header">
 	    <section class="header-section-logo">
-            <div class="header-logo"><a href="index.html"><img src="img/logo.png" width="220" height="47" alt="Логотип компании Техномарт"></a></div>
+            <div class="header-logo"><a href="index.html"><img src="img/logo-header.png" width="220" height="47" alt="Логотип компании Техномарт"></a></div>
 			<form class="header-search">
                 <input type="search" name="q" placeholder="Поиск:">
             </form>
@@ -70,7 +70,7 @@
 					    <h2>Дрели</h2>
 					    <p>Соседям на радость!</p>
 					    <div  class="link-button"><a href="catalog.html">открыть каталог</a></div>
-						<img src="img/1.svg" width="620" height="266" alt="Фото рабочего с дрелью">
+						<img src="img/drills.jpg" width="620" height="266" alt="Фото рабочего с дрелью">
 					</div>
 
 					<input type='radio' id='124' name='124' checked>
@@ -79,7 +79,7 @@
 					    <h2>Перфораторы</h2>
 					    <p>Настоящие мужские игрушки</p>
 					    <div  class="link-button"><a href="catalog.html">открыть каталог</a></div>
-						<img src="img/2.svg" width="620" height="266" alt="Фото рабочего с перфоратором">
+						<img src="img/perforator.jpg" width="620" height="266" alt="Фото рабочего с перфоратором">
 					</div>	
 				</li>
 				<li class="main-promo-item promo-sale">				    
@@ -101,7 +101,7 @@
 			<ul class="main-product-list">
 				<li class="main-product-item">
 					<div class="img-product">
-					    <img src="img/3.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 9000">
+					    <img src="img/snippet-32961.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 9000">
 				    </div>
 					<span>NEW</span>
 					<a class="main-product-item-link" href="blank.html">
@@ -112,7 +112,7 @@
 				</li>
 				<li class="main-product-item">
 					<div class="img-product">
-						<img src="img/4.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
+						<img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
 					</div>
 					<span>NEW</span>
 					<a class="main-product-item-link" href="blank.html">
@@ -123,7 +123,7 @@
 				</li>
 				<li class="main-product-item">
 					<div class="img-product">
-						<img src="img/5.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
+						<img src="img/snippet-945.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
 					<span>NEW</span>
 					<a class="main-product-item-link" href="blank.html">
@@ -134,7 +134,7 @@
 				</li>
 				<li class="main-product-item">
 					<div class="img-product">
-					    <img src="img/6.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
+					    <img src="img/snippet-18927.jpg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
 				    </div>
 					<span>NEW</span>
 					<a class="main-product-item-link" href="blank.html">
@@ -154,42 +154,42 @@
 			<ul class="main-producer-list">
 				<li class="main-producer-item">
 					<a href="blank.html">
-						<img src="img/7.svg" width="220" height="145" alt="Логотип компании BOSCH">
+						<img src="img/bosch.jpg" width="220" height="145" alt="Логотип компании BOSCH">
 					</a>
 				</li>
 				<li class="main-producer-item">
 					<a href="blank.html">
-						<img src="img/8.svg" width="220" height="145" alt="Логотип компании MAKITA">
+						<img src="img/Makita.jpg" width="220" height="145" alt="Логотип компании MAKITA">
 					</a>
 				</li>
 				<li class="main-producer-item">
 					<a href="blank.html">
-						<img src="img/9.svg" width="220" height="145" alt="Логотип компании DeWALT">
+						<img src="img/DeWALT.jpg" width="220" height="145" alt="Логотип компании DeWALT">
 					</a>
 				</li>
 				<li class="main-producer-item">
 					<a href="blank.html">
-						<img src="img/10.svg" width="220" height="145" alt="Логотип компании ИНТЕРСКОЛ">
+						<img src="img/interscol.jpg" width="220" height="145" alt="Логотип компании ИНТЕРСКОЛ">
 					</a>
 				</li>
 				<li class="main-producer-item">
 					<a href="blank.html">
-						<img src="img/11.svg" width="220" height="145" alt="Логотип компании HITACHI">
+						<img src="img/Hitachi.jpg" width="220" height="145" alt="Логотип компании HITACHI">
 					</a>
 				</li>
 				<li class="main-producer-item">
 					<a href="blank.html">
-						<img src="img/12.svg" width="220" height="145" alt="Логотип компании LG">
+						<img src="img/LG.jpg" width="220" height="145" alt="Логотип компании LG">
 					</a>
 				</li>
 				<li class="main-producer-item">
 					<a href="blank.html">
-						<img src="img/13.svg" width="220" height="145" alt="Логотип компании AEG">
+						<img src="img/AEG.jpg" width="220" height="145" alt="Логотип компании AEG">
 					</a>
 				</li>
 				<li class="main-producer-item">
 					<a href="blank.html">
-						<img src="img/14.svg" width="220" height="145" alt="Логотип компании METABO">
+						<img src="img/Metabo.jpg" width="220" height="145" alt="Логотип компании METABO">
 					</a>
 				</li>
 			</ul>
@@ -211,6 +211,7 @@
 						к вашему подъезду совершенно бесплатно!
 						Ведь мы неплохо заработаем,
 						поднимая его на ваш этаж!</p>
+						<img src="img/car.png" width="619" height="283" alt="Картинка автомобиля">
 				</div>
 
 				<div class="index-label">
@@ -251,7 +252,7 @@
 			    <h2>КОНТАКТЫ</h2>
 				<p>Вы можете забрать товар сами,<br>
                    заехав в наш офис:</p>
-				<a href="blank.html"><img src="img/map.jpeg" width="300" height="158" alt="Карта с нашим адресом"></a>
+				<a href="blank.html"><img src="img/map.jpg" width="300" height="158" alt="Карта с нашим адресом"></a>
 				<div class="link-button main-info-map-link"><a href="blank.html">Заблудились? Напишите нам!</a></div>
 			</div>
 		</section>
@@ -261,7 +262,7 @@
 	<footer class="footer">
 	
         <nav class="footer-navigation">
-	        <a class="footer-navigation-logo"><img src="img/index-logo.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»"></a>
+	        <a class="footer-navigation-logo"><img src="img/logo-footer.png" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»"></a>
 		    <p>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 				<a href="tel:+78125550555">+7 (812) 555-05-55</a>		
