добавил контекстные фото в каталог

--- a/catalog.html
+++ b/catalog.html
@@ -102,7 +102,7 @@
 			    <ul  class="catalog-products-list">
 				<li  class="main-product-item">
 					<div class="img-product">
-						<img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+						<img src="img/snippet-945.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
 					</div>
 					<span>NEW</span>
 					<a class="main-product-item-link" href="blank.html">
@@ -113,7 +113,7 @@
 				</li>
 				<li  class="main-product-item">
 					<div class="img-product">
-					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+					    <img src="img/snippet-945.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
 				    </div>
 					<span>NEW</span>	
 					<a class="main-product-item-link" href="blank.html">
@@ -124,7 +124,7 @@
 				</li>
 				<li  class="main-product-item">
 					<div class="img-product">
-					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+					    <img src="img/snippet-945.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
 				    </div>
 					<span>NEW</span>	
 					<a class="main-product-item-link" href="blank.html">
@@ -135,7 +135,7 @@
 				</li>
 				<li  class="main-product-item">
 					<div class="img-product">
-					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
+					    <img src="img/snippet-18927.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
 				    </div>
 					<span>NEW</span>	
 					<a class="main-product-item-link" href="blank.html">
@@ -146,7 +146,7 @@
 				</li>
 				<li class="main-product-item">
 					<div class="img-product">
-					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+					    <img src="img/snippet-945.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
 				    </div>
 					<span>NEW</span>	
 					<a class="main-product-item-link" href="blank.html">
@@ -157,7 +157,7 @@
 				</li>
 				<li  class="main-product-item">
 					<div class="img-product">
-					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
+					    <img src="img/snippet-18927.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
 				    </div>
 					<span>NEW</span>
 					<a class="main-product-item-link" href="blank.html">
@@ -168,7 +168,7 @@
 				</li>
 				<li class="main-product-item">
 					<div class="img-product">
-					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
+					    <img src="img/snippet-18927.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 3000">
 				    </div>
 					<span>NEW</span>	
 					<a class="main-product-item-link" href="blank.html">
@@ -179,7 +179,7 @@
 				</li>
 				<li  class="main-product-item">
 					<div class="img-product">
-					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
+					    <img src="img/snippet-945.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 6000">
 				    </div>
 					<span>NEW</span>	
 					<a class="main-product-item-link" href="blank.html">
@@ -190,7 +190,7 @@
 				</li>
 				<li  class="main-product-item">
 					<div class="img-product">
-					    <img src="img/3.svg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
+					    <img src="img/snippet-18927.jpg" width="144" height="128" alt="Изображение перфоратора BOSCH BFG 2000">
 				    </div>
 					<span>NEW</span>
 					<a class="main-product-item-link" href="blank.html">
@@ -223,7 +223,7 @@
 	<footer class="footer">
 	
         <nav class="footer-navigation">
-	        <a class="footer-navigation-logo"><img src="img/index-logo.svg" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»"></a>
+	        <a class="footer-navigation-logo"><img src="img/logo-footer.png" width="220" height="68" alt="Логотип интернет-магазина «Техномарт»"></a>
 		    <p>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 				<a href="tel:+78125550555">+7 (812) 555-05-55</a>		
