сетка шапки каталога

--- a/catalog.html
+++ b/catalog.html
@@ -11,6 +11,7 @@
 
     <header class="header">
 	    <section class="header-section-logo">
+			<div class="container-header-logo">
             <div class="header-logo"><a href="index.html"><img src="img/logo-header.png" width="220" height="47" alt="Логотип компании Техномарт"></a></div>
 			<form class="header-search">
                 <input type="search" name="q" placeholder="Поиск:">
@@ -18,15 +19,20 @@
 			<a class="header-link-bookmarks" href="#">Закладки: 0</a>
 			<a class="header-link-basket" href="#">Корзина: 10</a>
 			<a class="header-link-order" href="#">Оформить заказ</a>
+			</div>
 		</section>
 		<section class="header-section-centr">
-		    <p class="header-section-centr-title">Интернет-магазин
+			<div class="header-section-centr-title">
+		       <p>Интернет-магазин
 			   строительных материалов
 			   и инструментов для ремонта</p>
-			<p class="header-section-centr-contacts">
+			</div>
+			<div class="header-section-centr-contacts">
+			<p>
 			    <a class="header-section-centr-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
+			</div>
 			<div class="header-section-centr-authorization">
 				<div class="header-section-centr-name">
 					<a href="blank.html">Равшан Джамшутович</a>
